[gd_scene load_steps=28 format=2]

[ext_resource path="res://textures_&_sprites/health_bar/health_bar_full.png" type="Texture" id=1]
[ext_resource path="res://textures_&_sprites/powerup_bar/powerup_bar_full.png" type="Texture" id=2]
[ext_resource path="res://textures_&_sprites/powerup_bar/powerup_bar_7.png" type="Texture" id=3]
[ext_resource path="res://textures_&_sprites/health_bar/health_bar_8.png" type="Texture" id=4]
[ext_resource path="res://textures_&_sprites/health_bar/health_bar_7.png" type="Texture" id=5]
[ext_resource path="res://textures_&_sprites/powerup_bar/powerup_bar_3.png" type="Texture" id=6]
[ext_resource path="res://textures_&_sprites/powerup_bar/powerup_bar_5.png" type="Texture" id=7]
[ext_resource path="res://textures_&_sprites/powerup_bar/powerup_bar_4.png" type="Texture" id=8]
[ext_resource path="res://textures_&_sprites/health_bar/health_bar_empty.png" type="Texture" id=9]
[ext_resource path="res://textures_&_sprites/health_bar/health_bar_9.png" type="Texture" id=10]
[ext_resource path="res://textures_&_sprites/powerup_bar/powerup_bar_8.png" type="Texture" id=11]
[ext_resource path="res://textures_&_sprites/powerup_bar/powerup_bar_9.png" type="Texture" id=12]
[ext_resource path="res://textures_&_sprites/powerup_bar/powerup_bar_empty.png" type="Texture" id=13]
[ext_resource path="res://textures_&_sprites/health_bar/health_bar_4.png" type="Texture" id=14]
[ext_resource path="res://textures_&_sprites/powerup_bar/powerup_bar_1.png" type="Texture" id=15]
[ext_resource path="res://textures_&_sprites/health_bar/health_bar_6.png" type="Texture" id=16]
[ext_resource path="res://textures_&_sprites/powerup_bar/powerup_bar_2.png" type="Texture" id=17]
[ext_resource path="res://textures_&_sprites/powerup_bar/powerup_bar_6.png" type="Texture" id=18]
[ext_resource path="res://textures_&_sprites/health_bar/health_bar_2.png" type="Texture" id=19]
[ext_resource path="res://textures_&_sprites/health_bar/health_bar_1.png" type="Texture" id=20]
[ext_resource path="res://textures_&_sprites/health_bar/health_bar_5.png" type="Texture" id=21]
[ext_resource path="res://textures_&_sprites/health_bar/health_bar_3.png" type="Texture" id=22]
[ext_resource path="res://HUD.gd" type="Script" id=23]
[ext_resource path="res://textures_&_sprites/PressStart2P-Regular.ttf" type="DynamicFontData" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 14 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 18 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 56
font_data = ExtResource( 24 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 23 )

[node name="HealthBar" type="AnimatedSprite" parent="."]
position = Vector2( 139.491, 44.7171 )
frames = SubResource( 1 )

[node name="PowerupBar" type="AnimatedSprite" parent="."]
position = Vector2( 422.24, 44.7171 )
frames = SubResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.011
anchor_right = 0.5
anchor_bottom = 0.089
margin_left = -28.0
margin_top = 10.1
margin_right = 28.0
margin_bottom = -4.1
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
